DONE: In the settings menu, allow using Page Up, Page Down, Home, End.
FIXED: Fixed graphical glitches with an opening gate:
	1. with a loose floor above and a wall above-right.
	2. with the top half of a big pillar above-right.
FIXED: Validate mode crashed with the error "init_scaling: SDL_CreateTexture: Invalid renderer".
DONE: Rewrote all mentions of key combinations to the "Ctrl+A" style.
DONE: Marked which features of SDLPoP are not in the original game. (To prevent confusions like #197)
DONE: Allow Backspace and Ctrl+C during replay.
DONE: During playback, display the number of ticks since start, if the timer is shown (debug cheats: T).
FIXED: Fixed crashing when a MIDI music interrupted another one.
FIXED: Make it possible to go through a certain closed gate on level 11 of Demo by Suave Prince.
	Details: https://forum.princed.org/viewtopic.php?p=32326#p32326
	Testcase: replays-testcases/Demo by Suave Prince level 11.p1r
FIXED: When the prince jumps up at the bottom of a big pillar split between two rooms, a part near the top of the screen disappears.
	Example: The top row in the first room of the original level 5.
DONE: Added a debug cheat to quickload but keep the currently loaded level. (Shift+F9)
	Motivation: https://forum.princed.org/viewtopic.php?p=32556#p32556
FIXED: Fixed spiked/chomped/bumped guards teleporting into the wrong room. (if fixes are enabled)
	Details: https://github.com/NagyD/SDLPoP/pull/237
FIXED: Quicksave during feather fall mode. (if fixes are enabled)
	Details: https://github.com/NagyD/SDLPoP/pull/236
FIXED: Prevent the prince from entering a glitched room when he falls into a wall or he is revived near a wall.
	Details: replays-testcases/Original level 2 falling into wall.txt
	Testcase: replays-testcases/Original level 2 falling into wall.p1r
FIXED: Optimized OPL mixing (MIDI music).
	Details: https://github.com/NagyD/SDLPoP/pull/238
	"More importantly: when run on a Raspberry Pi Zero, the music went from unusable to perfect,"